src/main/resources/api/examples/errors/error-example-401.raml
#%RAML 1.0 NamedExample
values:
  message: Unauthorized